--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="open-sans-normal">
     <!-- Banner -->
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -72,7 +72,7 @@
         </div>
       </section>
       <!-- what i do section start -->
-      <section class="skills hide">
+      <section class="skills">
         <div>
           <h3 class="section-title text-center">What I Do</h3>
           <p class="section-description text-center">
@@ -123,7 +123,7 @@
         </div>
       </section>
       <!-- Resume -->
-      <section class="resumi hide">
+      <section class="resumi">
         <h1>A summary of My Resume</h1>
 
         <div class="resumi-container">
@@ -220,7 +220,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="secondary-bg hide">
+    <footer class="secondary-bg">
       <div class="footer column">
         <h3 class="section-title">Lets Connect</h3>
         <p>
